allow submission of polygon data
